--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </li>
            <li class="nav-item">
             <a class="nav-link" href="#">Sign Up</a>
-          </li>
+          </li><a class="nav-link" href="#">tesr</a>
         </ul>
       </div>
     </nav>
